# rusty-german

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
data/: adjektivendungen.txt  conjunctions.txt  konjuntiv-ii.txt  lokaladverbien.txt  nebensatze.txt  prepositions.txt  relativ-pronomen.txt  schwachen_verben.txt  starke_verben.txt  substantives.txt  temporalsatze.txt  verben_praposition.txt
src/: adjektivendungen.rs  articles.rs  conjunctions.rs  conjunctions_tests.rs  main.rs  nebensatze.rs  prepositions.rs  prepositions_tests.rs  pronouns.rs  read_file.rs  read_file_multi_options_exercise.rs  relativ_pronomen.rs  substantives.rs  substantives_tests.rs  temporal_satze.rs  temporal_satze_tests.rs  types.rs  verben.rs  verben_praposition.rs  verben_praposition_tests.rs  verben_tests.rs
src/clients/: chat_gpt.rs  mod.rs  mod_tests.rs
src/comparator/: mod.rs  mod_test.rs
src/config/: mod.rs  options.rs
src/exercise/: mod.rs  runner.rs
src/storage/: mod.rs  sqlite_storage.rs  sqlite_storage_tests.rs  storage_interface.rs  text_storage.rs
