[package]
name = "german-verben"
version = "0.1.0"
authors = ["pedroramos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.2"
rand = "0.7.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
select = "0.5.0"
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
typed-html = { git = "https://github.com/bodil/typed-html" }
