[package]
name = "rusty-german"
version = "0.1.0"
authors = ["pedroramos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
arrayvec = "0.5.2"
rand = "0.7.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.2"
tokio = { version = "1", features = ["full"] }
select = "0.5.0"
regex = "1"
lazy_static = "1.4.0"
sqlite = "0.26.0"
openssl = { version = "=0.10.33", optional = true, features = ["vendored"] }
clap = "3.0.0-beta.5"
rusty_german_entity_macro = "0.1.0"
rusty_german_types = "0.1.0"

[dev-dependencies]
typed-html = { git = "https://github.com/bodil/typed-html" }

[features]
vendored = ["openssl"]
